# stt-arena

./: .env.example  .gitignore  README.md  SPEC.md  main.py  pyproject.toml
assets/: package-lock.json  package.json  tsconfig.json  vite.config.ts
assets/scripts/: vite-socket-dev.mjs
assets/src/: App.tsx  export.ts  index.css  main.ts  record.ts  style.css  transcribe.ts  waveform.ts
assets/src/api/: providers.ts  transcribe.ts  types.ts
assets/src/components/audio/: AudioInputPanel.tsx  AudioPlayer.tsx  Dropzone.tsx  FileChip.tsx  RecordControls.tsx  Waveform.tsx
assets/src/components/layout/: AppShell.tsx
assets/src/components/providers/: ProviderPanel.tsx  ProvidersDrawer.tsx
assets/src/components/results/: CompareView.tsx  ExportToolbar.tsx  ResultCard.tsx  ResultTable.tsx  ResultsWorkspace.tsx  TranscriptionProgress.tsx
assets/src/components/ui/: badge.tsx  button.tsx  card.tsx  progress.tsx  select.tsx  sheet.tsx  skeleton.tsx  tabs.tsx
assets/src/hooks/: useAudioRecorder.ts  useProviders.ts  useTranscriptionStream.ts  useWaveform.ts
assets/src/lib/: diff.ts  export.ts  format.ts
src/stt_arena/: __init__.py  assets_util.py  audio.py  build.py  config.py  cost.py  dev.py  languages.py  logging_config.py  main.py  provider_timeouts.py  sessions.py  start.py  transcribe.py  vite.py  vite_proxy.py
src/stt_arena/providers/: __init__.py  base.py  deepgram.py  google.py  openai_whisper.py  whisper_local.py  xai_grok.py
src/stt_arena/templates/: index.html
src/stt_arena/templates/partials/: providers.html  result_card.html  result_card_loading.html  results.html  results_pending.html
tests/: test_audio.py  test_config.py  test_cost.py  test_dev.py  test_google_batch.py  test_languages.py  test_logging_config.py  test_main.py  test_port_util.py  test_provider_retries.py  test_provider_service.py  test_provider_timeouts.py
tests/test_providers/: test_availability.py  test_deepgram.py  test_openai_whisper.py  test_xai_grok.py
