[project]
name = "stt-arena"
version = "0.1.0"
description = "Compare Speech-to-Text providers side by side"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepgram-sdk>=7.2.0",
    "fastapi[standard]>=0.136.3",
    "faster-whisper>=1.2.1",
    "google-cloud-speech>=2.39.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.29",
    "uvicorn>=0.48.0",
]

[project.scripts]
dev = "stt_arena.dev:main"
build = "stt_arena.build:main"
start = "stt_arena.start:main"

[dependency-groups]
dev = [
    "basedpyright>=1.39.6",
    "ruff>=0.15.14",
    "pytest>=8.3.5",
    "httpx>=0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stt_arena"]

[tool.uv]
package = true

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"
