[project]
name = "stt-arena"
version = "0.1.0"
description = "Compare Speech-to-Text providers side by side"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.14.1",
    "python-multipart>=0.0.29",
    "stt-arena-providers",
    "stt-arena-vite",
    "uvicorn>=0.48.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.39.6",
    "ruff>=0.15.14",
    "pytest>=8.3.5",
    "httpx>=0.28.1",
    "stt-arena-tooling",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stt_arena"]

[tool.uv]
package = true

[tool.uv.sources]
stt-arena-tooling = { workspace = true }
stt-arena-providers = { workspace = true }
stt-arena-vite = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"

[tool.pytest.ini_options]
testpaths = ["tests"]
